src/styles.scss
@use './assets/style/helpers' as *;
@use './assets/style/components' as *;

/* Global styles */

/* width */

::-webkit-scrollbar {
  width: 0.5rem;
  height: 0.3rem;
}

/* Track */

::-webkit-scrollbar-track {
  background: color(body-color) !important;
}

/* Handle */

::-webkit-scrollbar-thumb {
  background: color(main-color) !important;
}

/* Handle on hover */

::-webkit-scrollbar-thumb:hover {
  background: color(dark) !important;
}

::placeholder {
  color: rgb(213, 213, 213) !important;
  font-size: 12px;
}

html {
  scroll-behavior: smooth !important;
}

body {
  margin: 0;
  padding: 0;
  background: color(body-color) !important;
  color: color(dark) !important;
  overflow-x: hidden;
}

// Global font weights
.bold-font {
  font-weight: weight(bold);
}

// Active link setup
.router-link-active {
  @extend .second-btn;
  &:hover {
    background: color(dark) !important;
  }
}

// Dark mode setup
.darkmode-activated {
  background-color: color(dark-body) !important;
  color: color(body-color) !important;
  #sidebar,
  .navbar,
  .bg-white,
  .main-card {
    background-color: color(main-color) !important;
    color: color(light);
    filter: brightness(90%);
  }
  .logo {
    display: none;
  }
  .main-muted-text,
  th,
  td,
  .main-title {
    color: color(light) !important;
  }
  input[type="text"],
  textarea {
    color: color(light);
    background-color: color(dark-body);
    border-color: color(dark);
  }
  .main-btn {
    background-color: color(dark-body) !important;
    color: color(body-color) !important;
    border-color: color(dark) !important;
  }
  .sub-menu-btn {
    color: color(body-color) !important;
    &::before {
      content: "❯";
      margin-right: 5px;
      color: color(dark-body) !important;
    }
  }
  .count-number {
    color: color(danger) !important;
  }
}

